--- a/index.html
+++ b/index.html
@@ -2,48 +2,135 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Song Word Trainer</title>
   <style>
     body {
-      font-family: sans-serif;
-      padding: 2rem;
-      background-color: #f0f0f0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #f9fafb;
+      color: #333;
+      max-width: 800px;
+      margin: 2rem auto;
+      padding: 1rem 2rem;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      border-radius: 8px;
+    }
+    h2 {
+      text-align: center;
+      color: #2c3e50;
+      margin-bottom: 1rem;
     }
     textarea {
       width: 100%;
-      height: 150px;
+      height: 140px;
       padding: 1rem;
-      font-size: 16px;
+      font-size: 1rem;
+      border: 1.8px solid #ccc;
+      border-radius: 6px;
+      resize: vertical;
+      transition: border-color 0.3s ease;
+    }
+    textarea:focus {
+      outline: none;
+      border-color: #3498db;
+      box-shadow: 0 0 8px rgba(52, 152, 219, 0.4);
     }
     button {
-      margin: 10px 5px;
-      padding: 0.5rem 1rem;
-      font-size: 16px;
+      margin: 12px 6px 24px 0;
+      padding: 0.55rem 1.3rem;
+      font-size: 1rem;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      background-color: #3498db;
+      color: white;
+      transition: background-color 0.25s ease;
+    }
+    button:hover {
+      background-color: #2980b9;
     }
     #output {
-      margin-top: 20px;
-      font-size: 18px;
+      font-size: 1.25rem;
+      line-height: 1.6;
+      user-select: none;
+      margin-bottom: 20px;
     }
     .word {
       display: inline-block;
-      margin-right: 10px;
-      padding: 5px 10px;
-      background: #fff;
-      border-radius: 6px;
-      box-shadow: 1px 1px 5px rgba(0,0,0,0.1);
+      margin: 6px 8px 6px 0;
+      padding: 8px 14px;
+      background: white;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+      cursor: pointer;
+      position: relative;
+      transition: background-color 0.3s ease;
+    }
+    .word:hover {
+      background-color: #d0e8ff;
     }
     .correct {
       background-color: #d4edda;
       color: #155724;
+      cursor: default;
     }
     .current {
-      background-color: #cce5ff;
-      color: #004085;
+      border: 2px solid #2980b9;
+      background-color: #eaf6ff;
+      font-weight: 600;
     }
     .saved {
       font-weight: bold;
       text-decoration: underline;
+      color: #8e44ad;
+    }
+    .translation {
+      font-size: 0.85rem;
+      color: #7f8c8d;
+      margin-top: 4px;
+      text-align: center;
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      top: 100%;
+      white-space: nowrap;
+      background: #fff;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      padding: 2px 6px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+      pointer-events: none;
+      opacity: 0;
+      transition: opacity 0.3s ease;
+      z-index: 10;
+    }
+    .word.show-translation .translation {
+      opacity: 1;
+      pointer-events: auto;
+    }
+    #userInput {
+      width: 100%;
+      padding: 12px;
+      font-size: 1.2rem;
+      border-radius: 6px;
+      border: 1.5px solid #ccc;
+      box-sizing: border-box;
+      margin-bottom: 1.5rem;
+      transition: border-color 0.3s ease;
+    }
+    #userInput:focus {
+      border-color: #3498db;
+      outline: none;
+      box-shadow: 0 0 8px rgba(52, 152, 219, 0.4);
+    }
+    #savedWords {
+      list-style: none;
+      padding-left: 0;
+      color: #6c3483;
+    }
+    #savedWords li {
+      margin-bottom: 8px;
+      font-size: 1.1rem;
     }
   </style>
 </head>
@@ -55,19 +142,77 @@
   <button onclick="revealWord()">Revelar palabra</button>
   <button onclick="saveWord()">Guardar palabra</button>
   <button onclick="readAgain()">Repetir palabra</button>
-  <input type="text" id="userInput" placeholder="Escribe la palabra aquí" oninput="checkWord()" /><br />
+  <input type="text" id="userInput" placeholder="Escribe la palabra aquí" oninput="checkWord()" autocomplete="off" /><br />
 
   <div id="output"></div>
+
   <h3>📌 Palabras guardadas:</h3>
   <ul id="savedWords"></ul>
 
   <script>
+    const dictionary = {
+      "there's": "hay",
+      "a": "un/una",
+      "stranger": "extraño",
+      "in": "en",
+      "my": "mi",
+      "bed": "cama",
+      "pounding": "golpeando",
+      "head": "cabeza",
+      "glitter": "brillo",
+      "all": "todo",
+      "over": "sobre",
+      "the": "el/la",
+      "room": "habitación",
+      "pink": "rosado",
+      "flamingos": "flamencos",
+      "pool": "piscina",
+      "i": "yo",
+      "smell": "oler",
+      "like": "como",
+      "minibar": "minibar",
+      "dj's": "dj's",
+      "passed": "pasado",
+      "out": "fuera",
+      "yard": "patio",
+      "barbie's": "barbie's",
+      "on": "en",
+      "barbeque": "parrilla",
+      "hickie": "chupetón",
+      "or": "o",
+      "bruise": "moretón",
+      "pictures": "fotos",
+      "last": "último",
+      "night": "noche",
+      "ended": "terminó",
+      "up": "arriba",
+      "online": "en línea",
+      "i'm": "yo soy",
+      "screwed": "arruinado",
+      "oh": "oh",
+      "well": "bueno",
+      "it's": "es",
+      "black": "negro",
+      "top": "parte superior",
+      "blur": "borroso",
+      "but": "pero",
+      "pretty": "bastante",
+      "sure": "seguro",
+      "it": "eso",
+      "ruled": "dominó",
+      // agrega más según quieras
+    };
+
     let words = [];
     let current = 0;
     let saved = [];
 
     function startTraining() {
       const lyrics = document.getElementById('lyrics').value;
+      if (!lyrics.trim()) {
+        alert('Por favor, pega la letra primero.');
+        return;
+      }
       words = lyrics.trim().split(/\s+/);
       current = 0;
       saved = [];
@@ -79,12 +224,33 @@
       const output = document.getElementById('output');
       output.innerHTML = '';
       words.forEach((word, i) => {
+        const cleanWord = word.toLowerCase().replace(/[.,!?]/g, ''); // quitar signos para buscar traducción
+        const translation = dictionary[cleanWord] || '—';
         const span = document.createElement('span');
         span.className = 'word';
         if (i < current) span.classList.add('correct');
         if (i === current) span.classList.add('current');
         if (saved.includes(i)) span.classList.add('saved');
         span.textContent = word;
+
+        // Crear el elemento para la traducción (invisible hasta click)
+        const transSpan = document.createElement('span');
+        transSpan.className = 'translation';
+        transSpan.textContent = translation;
+
+        span.appendChild(transSpan);
+
+        // Mostrar traducción al hacer clic y ocultar si ya está visible
+        span.onclick = () => {
+          if (span.classList.contains('show-translation')) {
+            span.classList.remove('show-translation');
+          } else {
+            // Ocultar otras traducciones abiertas
+            document.querySelectorAll('.word.show-translation').forEach(el => el.classList.remove('show-translation'));
+            span.classList.add('show-translation');
+          }
+        };
+
         output.appendChild(span);
       });
       document.getElementById('userInput').value = '';
@@ -93,13 +259,14 @@
 
     function checkWord() {
       const input = document.getElementById('userInput').value.trim().toLowerCase();
-      if (input === words[current].toLowerCase()) {
+      const cleanWord = words[current].toLowerCase().replace(/[.,!?]/g, '');
+      if (input === cleanWord) {
         current++;
         if (current < words.length) {
           updateDisplay();
           speak(words[current]);
         } else {
-          alert('¡Completado!');
+          alert('🎉 ¡Completado!');
           updateDisplay();
         }
       }
@@ -107,9 +274,9 @@
 
     function speak(text) {
       const utterance = new SpeechSynthesisUtterance(text);
-      utterance.lang = 'en-US'; // Inglés USA
+      utterance.lang = 'en-US';
       utterance.rate = 0.8;
-      speechSynthesis.cancel(); // detener cualquier otra voz en curso
+      speechSynthesis.cancel();
       speechSynthesis.speak(utterance);
     }
 
