--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
       }
 
       try {
-        const response = await fetch('http://localhost:3001/chat', {
+        const response = await fetch('https://sixty-towns-kiss.loca.lt/chat', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ message }),
