--- a/index.html
+++ b/index.html
@@ -6,44 +6,114 @@
   <title>Song Word Trainer</title>
   <style>
     body {
-      font-family: sans-serif;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f4f7fa;
+      margin: 0;
       padding: 2rem;
-      background-color: #f0f0f0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
+
+    h2 {
+      color: #2c3e50;
+      margin-bottom: 1rem;
+    }
+
     textarea {
       width: 100%;
+      max-width: 600px;
       height: 150px;
       padding: 1rem;
       font-size: 16px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
+      margin-bottom: 1rem;
+      resize: vertical;
     }
+
+    input[type="text"] {
+      width: 100%;
+      max-width: 600px;
+      padding: 0.5rem;
+      font-size: 16px;
+      margin: 1rem 0;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+    }
+
     button {
-      margin: 10px 5px;
-      padding: 0.5rem 1rem;
+      padding: 0.6rem 1.2rem;
+      font-size: 16px;
+      border: none;
+      border-radius: 6px;
+      background-color: #3498db;
+      color: white;
+      margin: 0.3rem;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+
+    button:hover {
+      background-color: #2980b9;
+    }
+
+    #output {
+      margin-top: 1rem;
+      max-width: 700px;
+      padding: 1rem;
+      background: #ffffff;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+    }
+
+    .word {
+      padding: 6px 10px;
+      background: #ecf0f1;
+      border-radius: 5px;
       font-size: 16px;
     }
-    #output {
-      margin-top: 20px;
-      font-size: 18px;
-    }
-    .word {
-      display: inline-block;
-      margin-right: 10px;
-      padding: 5px 10px;
-      background: #fff;
-      border-radius: 6px;
-      box-shadow: 1px 1px 5px rgba(0,0,0,0.1);
-    }
+
     .correct {
       background-color: #d4edda;
       color: #155724;
     }
+
     .current {
       background-color: #cce5ff;
       color: #004085;
-    }
-    .saved {
       font-weight: bold;
-      text-decoration: underline;
+    }
+
+    .saved {
+      border: 2px dashed #f39c12;
+      background-color: #fff9e6;
+      color: #b57300;
+    }
+
+    h3 {
+      margin-top: 2rem;
+      color: #2c3e50;
+    }
+
+    ul#savedWords {
+      list-style: none;
+      padding: 0;
+      max-width: 600px;
+      margin-top: 0.5rem;
+    }
+
+    ul#savedWords li {
+      background: #fdf6e3;
+      border: 1px solid #f0e2b6;
+      padding: 8px 12px;
+      border-radius: 6px;
+      margin-bottom: 5px;
+      color: #7f6000;
     }
   </style>
 </head>
@@ -51,13 +121,16 @@
   <h2>🎵 Song Word Trainer</h2>
   <p>Pega la letra de la canción (en inglés):</p>
   <textarea id="lyrics"></textarea><br />
-  <button onclick="startTraining()">Iniciar</button>
-  <button onclick="revealWord()">Revelar palabra</button>
-  <button onclick="saveWord()">Guardar palabra</button>
-  <button onclick="readAgain()">Repetir palabra</button>
-  <input type="text" id="userInput" placeholder="Escribe la palabra aquí" oninput="checkWord()" /><br />
+  <div>
+    <button onclick="startTraining()">Iniciar</button>
+    <button onclick="revealWord()">Revelar palabra</button>
+    <button onclick="saveWord()">Guardar palabra</button>
+    <button onclick="readAgain()">Repetir palabra</button>
+  </div>
+  <input type="text" id="userInput" placeholder="Escribe la palabra aquí" oninput="checkWord()" />
 
   <div id="output"></div>
+
   <h3>📌 Palabras guardadas:</h3>
   <ul id="savedWords"></ul>
 
@@ -107,9 +180,9 @@
 
     function speak(text) {
       const utterance = new SpeechSynthesisUtterance(text);
-      utterance.lang = 'en-US'; // Inglés USA
+      utterance.lang = 'en-US';
       utterance.rate = 0.8;
-      speechSynthesis.cancel(); // detener cualquier otra voz en curso
+      speechSynthesis.cancel();
       speechSynthesis.speak(utterance);
     }
 
